# atom

./: .gitignore  .travis.yml  LICENSE  README.md  atom.cabal  install.sh
Language/: Atom.hs
Language/Atom/: Analysis.hs  Channel.hs  Code.hs  Common.hs  Compile.hs  Elaboration.hs  Expressions.hs  Inspect.hs  Language.hs  Scheduling.hs  Types.hs  UeMap.hs  Unit.hs
Language/Atom/Channel/: Types.hs
Language/Atom/Example/: Channel.hs  ChannelCond.hs  External.hs  Gcd.hs  Periodic.hs  Probes.hs
stand-alone/: AST.hs
