name:    atom
version: 1.1.0

category: Language, Embedded

synopsis: An EDSL for embedded hard realtime applications.

description:
    Atom is a Haskell EDSL for designing hard realtime embedded software.
    Based on guarded atomic actions (similar to STM), Atom enables
    highly concurrent programming without the need for mutex locking.

    In addition, Atom performs compile-time task scheduling and generates code
    with deterministic execution time and constant memory use, simplifying the
    process of timing verification and memory consumption in hard realtime
    applications.

    Without mutex locking and run-time task scheduling, Atom eliminates
    the need and overhead of RTOSes for many embedded applications.

author:     Tom Hawkins <tomahawkins@gmail.com> (2007-2010),
            Benjamin Jones <bjones@galois.com>, Lee Pike <leepike@gmail.com>
            (2015-2016)
maintainer: Benjamin Jones <bjones@galois.com>, Lee Pike <leepike@gmail.com>


license:      BSD3
license-file: LICENSE

homepage: http://tomahawkins.org

build-type:    Simple
cabal-version: >= 1.10

extra-source-files:
    RELEASE-NOTES
  , stand-alone/atom.vim
  , stand-alone/Tutorial.atom

flag develop
  Description: Turn off compiler optimization during development
  Manual: True
  Default: False

library
    default-language: Haskell2010
    build-depends:
        base       >= 4.0     && < 5,
        mtl        ,
        process    ,
        syb        ,
        containers ,
        bimap      ,
        pretty

    exposed-modules:
        Language.Atom
        Language.Atom.Analysis
        Language.Atom.Channel
        Language.Atom.Channel.Types
        Language.Atom.Code
        Language.Atom.Common
        Language.Atom.Common.Fader
        Language.Atom.Common.Threshold
        Language.Atom.Common.ValidData
        Language.Atom.Compile
        Language.Atom.Elaboration
        Language.Atom.Example.External
        Language.Atom.Example.Gcd
        Language.Atom.Example.Probes
        Language.Atom.Expressions
        Language.Atom.Inspect
        Language.Atom.Language
        Language.Atom.Scheduling
        Language.Atom.Types
        Language.Atom.Unit
        Language.Atom.UeMap

    other-extensions: GADTs, DeriveDataTypeable

    ghc-options: -Wall -Werror
    if flag(develop)
        ghc-options: -Wall -Werror -O0

executable atom
  default-language: Haskell2010
  hs-source-dirs: stand-alone
  main-is: Main.hs
  build-tools:
    alex  >= 3 && < 4,
    happy >= 1 && < 2
  build-depends:
    base       >= 4.0     && < 5.0,
    array      >= 0.5     && < 0.6
  other-modules:
    Parser.Lex
    Parser.Parse
  extensions:

source-repository head
    type:     git
    location: git://github.com/GaloisInc/atom.git

